--- a/Swimmer_customer/app/src/main/res/layout/fragment_home.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_home.xml
@@ -89,7 +89,7 @@
                             android:id="@+id/rankingTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="랭킹"
+                            android:text="@string/fragment_home_raking_text"
                             android:layout_marginStart="20dp"
                             android:layout_marginTop="20dp"
                             android:textAppearance="@style/TextAppearance.AppCompat.Large"
