--- a/Swimmer_customer/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/Swimmer_customer/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -3,12 +3,62 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_nav_graph"
-    app:startDestination="@+id/item_home">
+    app:startDestination="@+id/LoginFragment">
+
+    <!-- Fragments and actions from nav_graph.xml -->
+    <fragment
+        android:id="@+id/MainFragment"
+        android:name="com.petpal.swimmer_customer.ui.main.MainFragment"
+        android:label="main_Fragment"
+        tools:layout="@layout/fragment_main">
+        <action
+            android:id="@+id/action_mainFragment_to_loginFragment"
+            app:destination="@id/LoginFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/LoginFragment"
+        android:name="com.petpal.swimmer_customer.ui.login.LoginFragment"
+        android:label="login_fragment"
+        tools:layout="@layout/fragment_login">
+
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/RegisterFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_findInfoFragment"
+            app:destination="@id/FindInfoFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_mainFragment"
+            app:destination="@id/MainFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/RegisterFragment"
+        android:name="com.petpal.swimmer_customer.ui.register.RegisterFragment"
+        android:label="register_fragment"
+        tools:layout="@layout/fragment_register">
+    </fragment>
+
+    <fragment
+        android:id="@+id/FindInfoFragment"
+        android:name="com.petpal.swimmer_customer.ui.findinfo.FindInfoFragment"
+        android:label="findInfo_fragment"
+        tools:layout="@layout/fragment_find_info">
+
+        <action
+            android:id="@+id/action_findInfoFragment_to_LoginFragment"
+            app:destination="@id/LoginFragment" />
+    </fragment>
+
+    <!-- Original fragments and actions from fragment_nav_graph.xml -->
     <fragment
         android:id="@+id/item_category"
         android:name="com.petpal.swimmer_customer.CategoryFragment"
         android:label="fragment_category"
         tools:layout="@layout/fragment_category" />
+
+    <!-- ... Other fragments and actions ... -->
     <fragment
         android:id="@+id/item_favorite"
         android:name="com.petpal.swimmer_customer.FavoriteFragment"
@@ -23,17 +73,11 @@
             android:id="@+id/action_item_home_to_itemDetailFragment"
             app:destination="@id/itemDetailFragment" />
     </fragment>
-
     <fragment
         android:id="@+id/item_history"
         android:name="com.petpal.swimmer_customer.HistoryFragment"
         android:label="fragment_history"
         tools:layout="@layout/fragment_history" />
-    <fragment
-        android:id="@+id/item_mypage"
-        android:name="com.petpal.swimmer_customer.MypageFragment"
-        android:label="fragment_mypage"
-        tools:layout="@layout/fragment_mypage" />
 
     <fragment
         android:id="@+id/itemDetailFragment"
@@ -60,4 +104,16 @@
             app:destination="@id/item_home" />
 
     </fragment>
+
+    <fragment
+        android:id="@+id/item_mypage"
+        android:name="com.petpal.swimmer_customer.ui.mypage.MypageFragment"
+        android:label="fragment_mypage"
+        tools:layout="@layout/fragment_mypage">
+
+        <action
+            android:id="@+id/action_item_mypage_to_LoginFragment"
+            app:destination="@id/LoginFragment" />
+    </fragment>
+
 </navigation>
