feat: [판매자용] 메뉴 화면 개발
- 메뉴 화면 전체화면으로 개발
- 일단 상품 등록 버튼만 기능하도록 구현해놓음

--- a/Swimmer_seller/app/src/main/res/menu/navigation_rail_menu.xml
+++ b/Swimmer_seller/app/src/main/res/menu/navigation_rail_menu.xml
@@ -4,40 +4,36 @@
 
     <item
         android:id="@+id/item_product"
-        android:icon="@drawable/shopping_bag_24px"
-        android:title="상품 관리"
+        android:title="@string/product_manage_subheader_title"
         app:showAsAction="always|withText">
-        <menu>
+<!--        <menu>
             <item
                 android:id="@+id/item_product_add"
-                android:title="상품 등록" />
+                android:title="@string/add_product_title" />
             <item
                 android:id="@+id/item_product_info"
-                android:title="상품 조회/수정" />
-        </menu>
+                android:title="@string/view_modify_product_title" />
+        </menu>-->
     </item>
     <item
         android:id="@+id/item_order"
-        android:icon="@drawable/local_shipping_24px"
-        android:title="주문/배송 관리"
+        android:title="@string/manage_order_ship_title"
         app:showAsAction="always|withText" />
     <item
         android:id="@+id/item_cs"
-        android:icon="@drawable/headset_mic_24px"
-        android:title="CS"
+        android:title="@string/cs_subheader_title"
         app:showAsAction="always|withText">
-        <menu>
+<!--        <menu>
             <item
                 android:id="@+id/item_notice"
-                android:title="공지 관리" />
+                android:title="@string/manage_notice_title" />
             <item
                 android:id="@+id/item_inq"
-                android:title="Item" />
-        </menu>
+                android:title="@string/manage_inquiry_title" />
+        </menu>-->
     </item>
     <item
         android:id="@+id/item_setting"
-        android:icon="@drawable/settings_24px"
-        android:title="설정"
+        android:title="@string/setting_title"
         app:showAsAction="always|withText" />
 </menu>
