--- a/Swimmer_customer/app/src/main/res/layout/fragment_payment.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_payment.xml
@@ -64,7 +64,8 @@
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/paymentViewPager"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_marginBottom="4dp" />
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/paymentTab"
