--- a/Swimmer_customer/app/src/main/res/layout/payment_item_row.xml
+++ b/Swimmer_customer/app/src/main/res/layout/payment_item_row.xml
@@ -7,9 +7,10 @@
 
     <ImageView
         android:id="@+id/paymentItemImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center|top"
+        android:layout_marginRight="12dp"
         app:srcCompat="@drawable/ic_launcher_background"
         tools:adjustViewBounds="true"
         tools:srcCompat="@tools:sample/avatars" />
@@ -28,7 +29,16 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
-            android:id="@+id/paymentItemOption"
+            android:id="@+id/paymentItemSize"
+            android:textSize="12sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="선택 옵션 :"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+        <TextView
+            android:id="@+id/paymentItemColor"
+            android:textSize="12sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="선택 옵션 :" />
@@ -40,7 +50,7 @@
             android:text="가격 :" />
 
         <TextView
-            android:id="@+id/paymentItemCount"
+            android:id="@+id/paymentItemQuantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="총 주문 갯수 :" />
