--- a/Swimmer_customer/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/Swimmer_customer/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -22,7 +22,8 @@
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_item_home_to_itemDetailFragment"
-            app:destination="@id/itemDetailFragment" />
+            app:destination="@id/itemDetailFragment"
+            app:popUpTo="@id/item_home" />
     </fragment>
 
     <fragment
@@ -41,15 +42,15 @@
         android:name="com.petpal.swimmer_customer.ui.product.ProductDetailFragment"
         android:label="fragment_item_detail"
         tools:layout="@layout/fragment_product_detail" >
-        <action
-            android:id="@+id/action_itemDetailFragment_to_item_home"
-            app:destination="@id/item_home" />
         <argument
             android:name="idx"
             app:argType="integer" />
         <action
             android:id="@+id/action_itemDetailFragment_to_paymentFragment"
             app:destination="@id/paymentFragment" />
+        <action
+            android:id="@+id/action_itemDetailFragment_to_item_home"
+            app:destination="@id/item_home" />
     </fragment>
     <fragment
         android:id="@+id/paymentFragment"
@@ -58,9 +59,6 @@
         <action
             android:id="@+id/action_paymentFragment_to_completeFragment"
             app:destination="@id/completeFragment" />
-        <action
-            android:id="@+id/action_paymentFragment_to_itemDetailFragment"
-            app:destination="@id/itemDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/completeFragment"
