--- a/Swimmer_customer/app/src/main/res/values/themes.xml
+++ b/Swimmer_customer/app/src/main/res/values/themes.xml
@@ -36,9 +36,16 @@
     <style name="HomeToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:fontFamily">@font/hsbombaram</item>
     </style>
+
     <!-- 툴바의 테마로 사용할 테마 -->
     <style name="Toolbar_Swimmer_Customer" parent="ThemeOverlay.Material3.Toolbar.Surface">
         <item name="colorPrimary">@color/material_dynamic_tertiary99</item>
+    </style>
+
+
+    <!-- custom ratingBar -->
+    <style name="CustomRatingBar" parent="Widget.AppCompat.RatingBar">
+        <item name="android:progressDrawable">@drawable/custom_ratingbar</item>
     </style>
 
     <style name="Theme.Swimmer_customer" parent="Base.Theme.Swimmer_customer" />
