--- a/Swimmer_seller/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/Swimmer_seller/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_item_home_to_item_product_add"
             app:destination="@id/item_product_add" />
+        <action
+            android:id="@+id/action_item_home_to_guideFragment"
+            app:destination="@id/guideFragment" />
     </fragment>
 
     <fragment
@@ -20,5 +23,10 @@
         android:name="com.petpal.swimmer_seller.ui.product.ProductAddFragment"
         android:label="fragment_product_add"
         tools:layout="@layout/fragment_product_add" />
+    <fragment
+        android:id="@+id/guideFragment"
+        android:name="com.petpal.swimmer_seller.ui.guide.GuideFragment"
+        android:label="fragment_guide"
+        tools:layout="@layout/fragment_guide" />
 
 </navigation>
