--- a/Swimmer_seller/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/Swimmer_seller/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -22,11 +22,24 @@
         android:id="@+id/item_product_add"
         android:name="com.petpal.swimmer_seller.ui.product.ProductAddFragment"
         android:label="fragment_product_add"
-        tools:layout="@layout/fragment_product_add" />
+        tools:layout="@layout/fragment_product_add" >
+        <action
+            android:id="@+id/action_item_product_add_to_productOptionFragment"
+            app:destination="@id/productOptionFragment">
+            <argument
+                android:name="product"
+                app:argType="com.petpal.swimmer_seller.data.model.Product" />
+        </action>
+    </fragment>
     <fragment
         android:id="@+id/guideFragment"
         android:name="com.petpal.swimmer_seller.ui.guide.GuideFragment"
         android:label="fragment_guide"
         tools:layout="@layout/fragment_guide" />
+    <fragment
+        android:id="@+id/productOptionFragment"
+        android:name="com.petpal.swimmer_seller.ui.product.ProductOptionFragment"
+        android:label="fragment_product_option"
+        tools:layout="@layout/fragment_product_option" />
 
 </navigation>
