feat : 메인 이미지 복수 등록 기능

--- a/Swimmer_seller/app/src/main/res/layout/fragment_guide.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_guide.xml
@@ -45,7 +45,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/imageViewGuid1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -69,7 +69,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/imageViewGuid2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -93,7 +93,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/imageViewGuid3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
