--- a/Swimmer_seller/app/src/main/res/layout/fragment_menu.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_menu.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        app:title="메뉴" />
+        app:title="@string/menu_title" />
 
     <LinearLayout
         android:layout_width="match_parent"
