--- a/Swimmer_customer/app/src/main/res/layout/fragment_register.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_register.xml
@@ -185,7 +185,7 @@
                 android:orientation="horizontal">
 
                 <CheckBox
-                    android:id="@+id/infoAgree"
+                    android:id="@+id/checkboxPrivacyPolicy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
