--- a/Swimmer_customer/app/src/main/res/layout/fragment_payment.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_payment.xml
@@ -124,7 +124,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
             <com.google.android.material.chip.ChipGroup
-                android:id="@+id/chipGroup"
+                android:id="@+id/paymentChipGroup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -133,6 +133,7 @@
                 app:singleSelection="true">
 
                 <com.google.android.material.chip.Chip
+                    android:id="@+id/paymentNaver"
                     style="@style/Widget.Material3.Chip.Suggestion"
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
@@ -141,6 +142,7 @@
                     app:chipSpacingHorizontal="42dp" />
 
                 <com.google.android.material.chip.Chip
+                    android:id="@+id/paymentKakao"
                     style="@style/Widget.Material3.Chip.Suggestion"
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
@@ -149,6 +151,7 @@
                     app:chipSpacingHorizontal="42dp" />
 
                 <com.google.android.material.chip.Chip
+                    android:id="@+id/paymentCard"
                     style="@style/Widget.Material3.Chip.Suggestion"
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
@@ -157,6 +160,7 @@
                     app:chipSpacingHorizontal="42dp" />
 
                 <com.google.android.material.chip.Chip
+                    android:id="@+id/paymentAccount"
                     style="@style/Widget.Material3.Chip.Suggestion"
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
@@ -165,6 +169,7 @@
                     app:chipSpacingHorizontal="42dp" />
 
                 <com.google.android.material.chip.Chip
+                    android:id="@+id/paymentMoblie"
                     style="@style/Widget.Material3.Chip.Suggestion"
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
@@ -173,6 +178,7 @@
                     app:chipSpacingHorizontal="42dp" />
 
                 <com.google.android.material.chip.Chip
+                    android:id="@+id/paymentCash"
                     style="@style/Widget.Material3.Chip.Suggestion"
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
