--- a/Swimmer_seller/app/src/main/res/layout/layout_imageview_delete.xml
+++ b/Swimmer_seller/app/src/main/res/layout/layout_imageview_delete.xml
@@ -2,8 +2,8 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
     android:layout_margin="5dp"
     app:cardCornerRadius="4dp"
     app:strokeColor="@color/md_theme_dark_outline">
@@ -29,5 +29,18 @@
         app:iconGravity="end"
         app:iconPadding="0dp"
         app:iconSize="20dp" />
+
+    <TextView
+        android:id="@+id/textViewIsMain"
+        style="@style/Widget.MaterialComponents.TextView"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:background="@drawable/primary_with_opacity_background"
+        android:text="대표사진"
+        android:textAlignment="center"
+        android:textColor="@color/md_theme_dark_onBackground"
+        android:textStyle="bold"
+        android:visibility="visible" />
 
 </com.google.android.material.card.MaterialCardView>
