--- a/Swimmer_seller/app/src/main/res/layout/fragment_menu.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_menu.xml
@@ -62,6 +62,24 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/linearLayoutOrderMagage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <Button
+                    android:id="@+id/buttonGoToManageOrder"
+                    style="@style/Widget.Material3.Button.TextButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start|center_vertical"
+                    android:text="@string/manage_order_ship_title"
+                    android:paddingStart="16dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/linearLayoutCS"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -86,6 +104,24 @@
                     android:text="@string/manage_inquiry_title"
                     android:paddingStart="16dp"/>
 
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayoutSetting"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <Button
+                    android:id="@+id/buttonGoToSetting"
+                    style="@style/Widget.Material3.Button.TextButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start|center_vertical"
+                    android:text="@string/setting_title"
+                    android:paddingStart="16dp"/>
 
             </LinearLayout>
         </LinearLayout>
