--- a/Swimmer_seller/app/src/main/res/layout/fragment_order_manage.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_order_manage.xml
@@ -193,14 +193,33 @@
             android:background="?android:attr/listDivider" />
 
         <LinearLayout
+            android:id="@+id/linearLayoutRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewOrder"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayoutNoOrder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/no_order"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/md_theme_dark_outlineVariant"
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 
